fixed styling on form on tablets and larger screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,7 +350,27 @@ main {
         column-count: 3;
     }
 
-}
+    /* Form styling */
+    #signup {
+       background-position: center;
+       position: relative }
+   
+    #signup-form {
+        max-width: 400px; 
+        position: absolute;
+        left:10%;
+        top: 150px;
+    }
+    .text-input:hover {
+        border-color: #f16c6b
+    }
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
+    
+    }
+
 
 /* Media query: laptops and larger (992px and up) */
 @media screen and (min-width: 992px) {
@@ -363,7 +383,7 @@ main {
     #photos {
         column-count: 4;
     }
-
+ 
 }
 
 /* Media query: screens of 1200px and wider */
